--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,15 @@ body, html {
     height: 50px;
     background-color: green;
     position: absolute;
-    top: 100%;
-    left: 100%;
+    top: 80%;
+    left: 80%;
 }
+#obstacle {
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+}
+
